[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Furniture.gd" type="Script" id=1]

[sub_resource type="BoxShape3D" id=1]
resource_local_to_scene = true

[sub_resource type="BoxShape3D" id=3]
resource_local_to_scene = true
extents = Vector3( 1, 0.05, 1 )

[node name="Furniture" type="Node3D" groups=["furnitures"]]
script = ExtResource( 1 )

[node name="FurnitureBody" type="StaticBody3D" parent="."]
collision_layer = 2
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape3D" type="CollisionShape3D" parent="FurnitureBody"]
shape = SubResource( 1 )
disabled = true

[node name="FurnitureArea" type="Area3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0 )
collision_layer = 2

[node name="FurnitureAreaCollisionShape" type="CollisionShape3D" parent="FurnitureArea"]
shape = SubResource( 3 )

[connection signal="area_entered" from="FurnitureArea" to="." method="_on_FurnitureArea_area_entered"]
[connection signal="area_exited" from="FurnitureArea" to="." method="_on_FurnitureArea_area_exited"]
